--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring.cloud.stream.bindings.pods-in.contentType: application/json
 spring.cloud.stream.kafka.streams.binder.configuration.commit.interval.ms: 1000
 spring.cloud.stream.kafka.streams:
   binder.configuration:
-    default.key.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
-    default.value.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
+    #default.key.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
+    #default.value.serde: org.apache.kafka.common.serialization.Serdes$StringSerde
   bindings.pods-in.consumer.application-id: justride-v2
 spring.cloud.stream.bindings.violations-out:
   destination: violations
